finish animated navbar

--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/2 - animated navbar.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/2 - animated navbar.css
@@ -32,3 +32,9 @@ a::after{
     transition: 0.45s;
     border-radius: 10px;
 }
+a:hover{
+    color: black;
+}
+a:hover::after{
+    scale: 1 1;
+}
