--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
@@ -14,3 +14,9 @@ body{
     animation: rotate 5s infinite linear;
     transform-style: preserve-3d;
 }
+.face{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border: 2px solid red;
+}
