--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
@@ -48,3 +48,31 @@ body{
     transform: rotateX(90deg);
     animation-name: spin-cube-after;
 }
+@keyframes spin-all{
+    50%, 100%{
+        transform: rotate(720deg);
+    }
+}
+@keyframes spin-cube{
+    0%, 50%{
+        border-radius: 100%;
+        transform: rotate(39deg) rotateX(0deg) rotateY(0deg);
+        left: 20vmin;
+        top: 10vmin;
+        height: 10vmin;
+    }
+    50%, 100%{
+        border-radius: 2vmin;
+        transform: rotate(48deg) rotateX(22.5deg) rotateY(-22.5deg);
+        left: 14.5vmin;
+        top: 5vmin;
+        width: 20vmin;
+        height: 20vmin;
+    }
+}
+@keyframes spin-cube-before{
+    0%, 50%{
+        border-radius: 100%;
+        transform: rotateY(-180deg) rotateX(0deg);
+    }
+}
