--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/3 - cube loader.css
@@ -1,7 +1,7 @@
 * {
     transform-style: preserve-3d;
 }
-body{
+body {
     margin: 0;
     height: 100vh;
     overflow: hidden;
@@ -9,13 +9,13 @@ body{
     place-items: center;
     background: #212121;
 }
-.content{
+.content {
     width: 50vmin;
     height: 50vmin;
     perspective: 100vmin;
     animation: spin-all 4s ease-in-out 0s infinite;
 }
-.cube{
+.cube {
     background: #fff;
     width: 20vmin;
     height: 20vmin;
@@ -26,10 +26,10 @@ body{
     top: 5vmin;
     transition: all 1s ease 0s;
 }
-.cube, .cube:before, .cube:after{
+.cube, .cube:before, .cube:after {
     animation: spin-cube 2s ease-in-out -3s infinite alternate;
 }
-.cube:before, .cube:after{
+.cube:before, .cube:after {
     position: absolute;
     content: "";
     background: #fff;
@@ -43,25 +43,27 @@ body{
     transition: all 1s ease 0s;
     animation-name: spin-cube-before;
 }
-.cube:after{
+.cube:after {
     top: 4vmin;
+    left: 4vmin;
     transform: rotateX(90deg);
     animation-name: spin-cube-after;
 }
-@keyframes spin-all{
+@keyframes spin-all {
     50%, 100%{
         transform: rotate(720deg);
     }
 }
-@keyframes spin-cube{
-    0%, 50%{
+@keyframes spin-cube {
+    0%, 50% {
         border-radius: 100%;
         transform: rotate(39deg) rotateX(0deg) rotateY(0deg);
         left: 20vmin;
         top: 10vmin;
+        width: 10vmin;
         height: 10vmin;
     }
-    50%, 100%{
+    50%, 100% {
         border-radius: 2vmin;
         transform: rotate(48deg) rotateX(22.5deg) rotateY(-22.5deg);
         left: 14.5vmin;
@@ -70,9 +72,39 @@ body{
         height: 20vmin;
     }
 }
-@keyframes spin-cube-before{
-    0%, 50%{
+@keyframes spin-cube-before {
+    0%, 50% {
         border-radius: 100%;
         transform: rotateY(-180deg) rotateX(0deg);
+        left: 11vmin;
+        top: 9vmin;
+        width: 100%;
+        height: 100%;
+    }
+    50%, 100% {
+        border-radius: 2vmin;
+        transform: rotateY(-90deg);
+        left: 4vmin;
+        top: 2.5vmin;
+        width: calc(100% - 2vmin);
+        height: calc(100% - 2vmin);
+    }
+}
+@keyframes spin-cube-after {
+    0%, 50% {
+        border-radius: 100%;
+        transform: rotateY(0deg) rotateX(180deg);
+        left: 5vmin;
+        top: 12vmin;
+        width: 100%;
+        height: 100%;
+    }
+    50%, 100% {
+        border-radius: 2vmin;
+        transform: rotateX(90deg);
+        left: 2.5vmin;
+        top: 4vmin;
+        width: calc(100% - 2vmin);
+        height: calc(100% - 2vmin);
     }
 }
