update animation progress bar

--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/06 - animation progress bar.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/06 - animation progress bar.css
@@ -22,7 +22,7 @@ body {
     background-color: #bd47ef;
     border-radius: 30px;
     box-shadow: 0 0 10px 4px rgba(189, 71, 239, 0.6);
-    animation: progressAnimation 7s ease-out infinite;
+    animation: progressAnimation 7s ease-out;
 }
 
 @keyframes progressAnimation {
