update animation progress bar

--- a/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/06 - animation progress bar.css
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/06 - animation progress bar.css
@@ -26,13 +26,7 @@ body {
 }
 
 @keyframes progressAnimation {
-    0% {
-        width: 0%;
-    }
-    80% {
-        width: 85%;
-    }
-    100% {
-        width: 100%;
-    }
+    0% { width: 0%; }
+    80% { width: 85%; }
+    100% { width: 100%; }
 }
